Fixed too small padding at the bottom of the fieldset

--- a/view/adminhtml/web/css/source/_instant-preview.less
+++ b/view/adminhtml/web/css/source/_instant-preview.less
@@ -148,7 +148,7 @@ body.melios-instant-preview {
 
         .admin__fieldset-wrapper-content .admin__fieldset {
             padding-top: 0.5rem;
-            padding-bottom: 1.5rem;
+            padding-bottom: 2.5rem;
         }
 
         &[data-mls-size="sm"] {
